--- a/components/image-block/index.module.css
+++ b/components/image-block/index.module.css
@@ -2,12 +2,15 @@
     width: 512px;
     height: 512px;
     border: 1px solid #000;
-    background: #1c1c1c;
+    background-color: #1c1c1c;
     cursor: pointer;
     position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.blockContainer:hover {
+.blockContainer:hover, .blockContainer_focused {
     box-shadow: 0px 0px 4px 3px rgba(255, 255, 255, 0.71);
     z-index: 10;
 }
